fix alignment with content block

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -487,7 +487,7 @@ td > .dl-horizontal {
 }
 
 .old-browser-warning {
-    padding: 50px;
+    padding: 33px;/* 30px + 3px optical inset */
     font-size: 30px;
 }
 
@@ -495,7 +495,7 @@ td > .dl-horizontal {
     .impersonate-warning, .old-browser-warning {
         position: inherit;
         margin: 0 0 0 250px;
-        padding: 15px 30px;
+        padding: 15px 48px;/* 45px + 3px optical inset */
     }
 }
 
